BOM overflow fix Bom test page route added fix selection appearing with mouse

--- a/wirewerks/client/ui/src/styles/general/_ww.scss
+++ b/wirewerks/client/ui/src/styles/general/_ww.scss
@@ -270,7 +270,7 @@ ww-part {
 
 	&:hover {
 		selection-overlay {
-			opacity: 0.1;
+			background: rgba(0, 0, 0, 0.1)
 		}
 	}
 
